Attempting to convert plugin to a gem

--- a/README.rdoc
+++ b/README.rdoc
@@ -57,3 +57,22 @@ Adding the following line to the app's environment.rb fixes it for now.
 We hope to address this in the future.
 
 Copyright (c) 2010 12 Spokes, released under the MIT license
+= tandem
+
+Description goes here.
+
+== Contributing to tandem
+ 
+* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
+* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
+* Fork the project
+* Start a feature/bugfix branch
+* Commit and push until you are happy with your contribution
+* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
+* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+
+== Copyright
+
+Copyright (c) 2011 Jay Crouch. See LICENSE.txt for
+further details.
+
