inital mountable engine setup: 5th try

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,78 +1,3 @@
-Tandem - version: 0.1.1
-======
+= Tandem
 
-A simple Rails plugin that brings basic CMS functionality to any app.  Just drop it in and go.
-
-
-Installation
-=======
-
-  script/plugin install git@github.com:12spokes/tandem.git
-
-For now, you need to copy all of the migrations in /vendor/plugins/tandem/db/migrate up to the route of your rails app.
-
-Add the following line to your app's routes.rb.  Most often, you'll want it at the bottom.
-
-  map.connect ':token', :controller => 'tandem_pages', :action => 'show'
-
-Define who can edit content in your application_controller.rb.  By default, anyone can add/edit/destroy pages and content.
-
-  def can_edit_tandem_content?
-    logged_in? && @current_user.admin?
-  end
-
-
-Usage
-=======
-
-Go to /tandem_pages to manage your pages.
-
-Tandem supports finding pages by token, so if you give your page a token of jumping_jacks, the page can be found at /jumping_jacks.
-
-There isn't a backend for managing content.  Well, there is, but it isn't the intended method for managing content and might go away.
-
-You manage content by going to the page.  If you are able to edit it, you'll see Edit and Delete links as well as a link to add content.
-
-
-Roadmap
-=======
- * support custom page titles
- * custom view templates
- * meta keywords and descriptions
- * icons for edit and delete (and style them so they don't break the layout)
- * in-place editing
- * TandemImage library
- * make it easy to hook in custom TandemContent resource types.
-
-
-Notes
-=======
-If you get a "A copy of AuthenticatedSystem has been removed from the module tree but is still active!" error
-This is probably because you're using Restful_Authentication and there's some dependency problems.
-
-Adding the following line to the app's environment.rb fixes it for now.
-
-  config.load_once_paths += %W( #{RAILS_ROOT}/lib )
-
-We hope to address this in the future.
-
-Copyright (c) 2010 12 Spokes, released under the MIT license
-= tandem
-
-Description goes here.
-
-== Contributing to tandem
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
-
-== Copyright
-
-Copyright (c) 2011 Jay Crouch. See LICENSE.txt for
-further details.
-
+This project rocks and uses MIT-LICENSE.
