Documented tandom_content_tag Refactored links in page and content views to better reflect 'inline editing' Added a home page route

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
 = Tandem
 
 This project rocks and uses MIT-LICENSE.
+
+#require 'rdoc'
+#RDoc::Markup::ToHtml.new.convert(IO.read('app/helpers/tandem/pages_helper.rb'))
