--- a/README.rdoc
+++ b/README.rdoc
@@ -63,6 +63,22 @@ edit content and Tandem will take care of the rest.
       <%= tandem_text_tag(@page, :sidebar_text)
     </div>
 
+=== Navigation
+
+Tandem comes with a helper method to add a navigation menu. It's not included in the default
+views, since it will most likely be used in your app's application layout. Adding it is easy,
+though.
+
+    <%= tandem_navigation_tag(@page) %>
+
+By default, Tandem will produce a nested tree of all your pages. If you just want the top level:
+
+    <%= tandem_navigation_tag(@page, Page.top_level) %>
+
+You can also create submenus easily by passing in a collection of pages, e.g.
+
+    <%= tandem_navigation_tag(@page, Page.find_by_title('Services').children) %>
+
 == Authentication
 
 Now, most apps don't simply want to let anyone edit content. Tandem allows you to easily
