--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Tandem CMS
 
-Tandme is a content management system (CMS) for Rails 3.1+. We felt like it was 
+Tandem is a content management system (CMS) for Rails 3.1+. We felt like it was 
 needed because too many of the CMS options for Rails are either 
 unpolished—something we wouldn't want to put in front of our clients or bloated
 and heavy, causing many headaches when trying to integrate into existing 
