--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,6 @@
+0.3 - TBD
+ * Bug - Options passed to a main_app url_helper from within tandem get passed as an array
+
 0.2.2 - June 28, 2012
  * Bug - Bundled tandem-specific fonts instead of using Google's fonts so that it doesn't throw warnings if using https protocol.
 
